# agent-smith

./: .gitignore  Makefile  README.md  pyproject.toml
chart/attack/: Chart.yaml  values.yaml
chart/target-apps/: Chart.yaml  values.yaml
docs/: CHANGELOG.md  PLAN.md
docs/adrs/: 001-project-restructuring.md
docs/research/: post-breach-analysis.md
docs/specs/: kill-chain.md
scripts/: attacker.sh  auto-attack.sh  cleanup.sh  config.sh  deploy.sh
scripts/attacks/: attack-agent-worm.sh  attack-exfil-dns.sh  attack-hijack-model.sh  attack-lateral-db.sh  attack-log-flood.sh  attack-miner.sh  attack-persist-claude.sh  attack-persist-cronjob.sh  attack-recon.sh  attack-scale-zero.sh  attack-steal-secrets.sh  attack-steal-tokens.sh  connect.sh  exploit.sh  full-attack.sh  hold-shell.sh  lib.sh  trigger.sh  wait-shell.sh
scripts/payloads/: claude-md-override.txt  skill-k8s-ops.txt
smith/: __init__.py  __main__.py  app.py  cli.py  config.py  output_parser.py  registry.py  runner.py
smith/screens/: attack_detail.py  execution.py  guided.py  main_menu.py  target_picker.py
smith/widgets/: banner.py  briefing_panel.py  finding_card.py  loot_panel.py  phase_list.py  phase_progress.py  result_tracker.py  status_bar.py
tests/: attack-chart.test.sh  conftest.py  target-apps-chart.test.sh  test_cli.py  test_config.py  test_output_parser.py  test_registry.py  test_runner.py  test_smoke.sh
tests/integration/: Dockerfile.agent  Dockerfile.attacker  compose.yaml  entrypoint.sh  mock_server.py  run.sh
tests/test_tui_snapshots/: test_attack_detail.py  test_execution.py  (+1 more)
(+18 files in other folders)
